# state-aware-videogen

./: .env.example  APPROACH.md  PROJECT_SPEC.md  README.md  SETUP_GUIDE.md  ap.py  pyproject.toml
projects/project_12d2152e/: project_state.json  shot_manifest.json
projects/project_1912527c/: project_state.json
projects/project_31255839/: project_state.json  shot_manifest.json
projects/project_4f0a3626/: project_state.json  shot_manifest.json
projects/project_b126c0ac/: project_state.json  shot_manifest.json
projects/project_c18a4517/: project_state.json
projects/project_generate_check/shots/: shot_generate_check_v1.provider_error.txt
projects/project_real_check/shots/: shot_real_check_v1.provider_error.txt
src/: __init__.py  composer.py  edit_analyzer.py  gemini_agent.py  generator.py  graph.py  impact_analyzer.py  prompt_builder.py  regenerator.py  shot_planner.py  state.py  storage.py
